frame/support/test/tests/storage_alias_ui/prefix_must_be_an_ident.rs
#[frame_support::storage_alias]
type NoUnderscore = StorageValue<_, u32>;

fn main() {}
